--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -14,50 +14,27 @@
 <p><strong>Очистить список проектов в „Switch Project“:</strong></p>
 <p>Project → Open Recent → Clear Items</p>
 <h2>Keyboard shortcuts</h2>
-<h3>Мой конфиг</h3>
-<pre>[
-    // Закрытие проекта
-    { &quot;keys&quot;: [ &quot;ctrl+alt+w&quot; ], &quot;command&quot;: &quot;close_workspace&quot; },
-    // Поиск в выделенном
-    { &quot;keys&quot;: [ &quot;alt+s&quot; ], &quot;command&quot;: &quot;toggle_in_selection&quot;, &quot;context&quot;:
-        [
-            { &quot;key&quot;: &quot;setting.is_widget&quot;, &quot;operator&quot;: &quot;equal&quot;, &quot;operand&quot;: true }
-        ]
-    },
-    // Удали системные клавиши и разлогинься-залогинься, чтобы работало:
-    { &quot;keys&quot;: [&quot;ctrl+alt+up&quot;], &quot;command&quot;: &quot;select_lines&quot;, &quot;args&quot;: {&quot;forward&quot;: false} },
-    { &quot;keys&quot;: [&quot;ctrl+alt+down&quot;], &quot;command&quot;: &quot;select_lines&quot;, &quot;args&quot;: {&quot;forward&quot;: true} },
-]
-</pre>
-<h3>Список</h3>
 <ul>
-    <li>
-        <kbd>Ctrl + P</kbd> - список файлов проекта (с поиском) и открытие выбранного;</li>
-    <li>
-        <kbd>Ctrl + Shift + P</kbd> - вывести списко снипетов и команд всех плагинов с поиском, а так же сменить подветку синтаксиса текущего файла;</li>
-    <li>
-        <kbd>Ctrl + Alt + P</kbd> - переключиться на другой проект (с поиском);</li>
-    <li>
-        <kbd>Ctrl + R</kbd> - список методов в файле и переход по ним (с поиском)</li>
-    <li>
-        <kbd>Ctrl + G</kbd> - переход к строке по номеру</li>
-    <li>
-        <kbd>Alt + -</kbd> - переход к предыдущему месту редактирования;</li>
-    <li>
-        <kbd>Ctrl + Alt + LMB</kbd> - чтобы свернуть все папки в сайдбаре сублима достаточно кликнуть ЛКМ по корневой папке с зажатым Ctrl и Alt (в Windows только с Alt).</li>
-    <li>
-        <kbd>Ctrl + D</kbd> - выделить текущее слово или если уже выделены символы, то выделить следующий такой же набор символов</li>
-    <li>
-        <kbd>Ctrl + Shift + D</kbd> - </li>
-    <li>
-        <kbd>Ctrl + Shift + G</kbd> - окружить выделенное новым HTML тегом</li>
-    <li>
-        <kbd>Ctrl + Shift + A</kbd> - выделить все в текущем HTML теге</li>
-    <li>
-        <kbd>Ctrl + J</kbd> - добавить следующую строку (с вычетом отступа следующей строки) к текущей через пробел</li>
-    <li>
-        <kbd>Ctrl + Shift + Space</kbd> - всплывающая подсказка с DocBlock если поствить курсор в начало параметров метода (сразу после открывающей круглой скобки)
-    </li>
+    <li><kbd>Ctrl + P</kbd> - список файлов проекта (с поиском) и открытие выбранного;</li>
+    <li><kbd>Ctrl + Shift + P</kbd> - вывести списко снипетов и команд всех плагинов с поиском, а так же сменить подветку синтаксиса текущего файла;</li>
+    <li><kbd>Ctrl + Alt + P</kbd> - переключиться на другой проект (с поиском);</li>
+    <li><kbd>Ctrl + R</kbd> - список методов в файле и переход по ним (с поиском)</li>
+    <li><kbd>Ctrl + G</kbd> - переход к строке по номеру</li>
+    <li><kbd>Alt + -</kbd> - переход к предыдущему месту редактирования;</li>
+    <li><kbd>Ctrl + Alt + LMB</kbd> - чтобы свернуть все папки в сайдбаре сублима достаточно кликнуть ЛКМ по корневой папке с зажатым Ctrl и Alt (в Windows только с Alt).</li>
+    <li><kbd>Ctrl + D</kbd> - выделить текущее слово или если уже выделены символы, то выделить следующий такой же набор символов</li>
+    <li><kbd>Ctrl + Shift + D</kbd> - </li>
+    <li><kbd>Ctrl + Shift + G</kbd> - окружить выделенное новым HTML тегом</li>
+    <li><kbd>Ctrl + Shift + A</kbd> - выделить все в текущем HTML теге</li>
+    <li><kbd>Ctrl + J</kbd> - добавить следующую строку (с вычетом отступа следующей строки) к текущей через пробел</li>
+    <li><kbd>Ctrl + Shift + Space</kbd> - всплывающая подсказка с DocBlock если поствить курсор в начало параметров метода (сразу после открывающей круглой скобки)</li>
+</ul>
+<h3>Закладки</h3>
+<ul>
+    <li><kbd>Ctrl + F2</kbd> — Установить / снять закладку.</li>
+    <li><kbd>F2</kbd> — Перейти к следующей закладке.</li>
+    <li><kbd>⇧ + F2</kbd> — Перейти к предыдущей закладке.</li>
+    <li><kbd>Ctrl + ⇧ + F2</kbd> — Удалить все закладки.</li>
 </ul>
 <h2>Плагины</h2>
 <h3>ANSIescape</h3>
