change rails all

--- a/rails/all.html
+++ b/rails/all.html
@@ -3,7 +3,7 @@
 <p><code>flatrack start -p4001</code> - гем flatrack (отдельный фрейворк для статичных сайтов)</p>
 
 <h3>Приложение</h3>
-<p><code class="copyToClipboard">rails new testApp</code> - создание нового приложения.</p>
+<p><code class="copyToClipboard">rails new testApp</code> - создание нового приложения (или <code>rails new ./</code>).</p>
 <p><code class="copyToClipboard">rails s</code> - запуск приложения.</p>
 <p><code class="copyToClipboard">rails s -d</code> - запуск как демона.</p>
 <p><code class="copyToClipboard">rails s -b 0.0.0.0</code> - запуск с доступом извне.</p>
