--- a/npm/all.html
+++ b/npm/all.html
@@ -1,6 +1,6 @@
 <p>npm — это пакетный менеджер node.js.</p>
 <h2>Установка</h2>
-<p><code class="copyToClipboard prettyprint lang-sh">sudo apt-get install npm</code></p>
+<p><code class="copyToClipboard">sudo apt-get install npm</code></p>
 
 <h2>Обновление nodejs до последней версии</h2>
 <pre class="prettyprint lang-sh">
@@ -15,3 +15,6 @@ sudo npm install npm@latest -g
 sudo npm install -g n
 sudo n stable
 </pre>
+
+<h2>Кастомизация пути вендора при установки отдельного пакета</h2>
+<p><code class="copyToClipboard">npm install archy --prefix ./theme/yarn</code></p>
