--- a/npm/all.html
+++ b/npm/all.html
@@ -18,3 +18,11 @@ sudo n stable
 
 <h2>Кастомизация пути вендора при установки отдельного пакета</h2>
 <p><code class="copyToClipboard">npm install archy --prefix ./theme/yarn</code></p>
+
+<h2>Прокси</h2>
+<p><var class="copyToClipboard">subl ~/.npmrc</var> <code>proxy=http://proxy.domain:3111/</code></p>
+
+<h2>Настройки</h2>
+<p><code class="copyToClipboard">npm config list</code></p>
+<p><code class="copyToClipboard">npm config ls -l</code></p>
+<p><code class="copyToClipboard">npm config edit</code></p>
