npm all: command options.

--- a/npm/all.html
+++ b/npm/all.html
@@ -26,3 +26,10 @@ sudo n stable
 <p><code class="copyToClipboard">npm config list</code></p>
 <p><code class="copyToClipboard">npm config ls -l</code></p>
 <p><code class="copyToClipboard">npm config edit</code></p>
+
+<h2>Команды опции</h2>
+
+<p><code>npm install &lt;package-name&gt;</code></p>
+<p><code>--save</code> — позволяет установить пакет и добавить запись о нём в раздел <code>dependencies</code> файла <var>package.json</var>.</p>
+<p><code>--save-dev</code> — позволяет установить пакет и добавить запись о нём в раздел <code>devDependencies</code> файла <var>package.json</var>. Данный раздел содержит перечень зависимостей для разработки, тестирования и т.п.</p>
+<p><code>npm update</code> — для обновления пакетов</p>
