--- a/vue/_tasks/basket/basket.html
+++ b/vue/_tasks/basket/basket.html
@@ -13,7 +13,7 @@
     </ol>
     <basket-list ref="basketList"></basket-list>
   </div>
-  <script type="text/javascript" src="../../../node_modules/vue/dist/vue.min.js"></script>
+  <script type="text/javascript" src="../../../node_modules/vue/dist/vue.js"></script>
   <script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="test.js"></script>
   <script type="text/javascript">
