vue: task NumberCorrector - component should be not global

--- a/vue/_tasks/number-corrector/number-corrector.html
+++ b/vue/_tasks/number-corrector/number-corrector.html
@@ -55,6 +55,9 @@
           console.log('this: ', this)
           console.log('a: ', a)
         }
+      },
+      components: {
+        "number-corrector": window.NumberCorrector
       }
     }
 
