--- a/jquery/lorem/lorem.html
+++ b/jquery/lorem/lorem.html
@@ -23,6 +23,9 @@
     // Изоляция
     ;(function($) {
       "use strict"
+      $(document).ready(function() {
+        alert('Done.');
+      });
     })(jQuery);
 
   </script>
