--- a/css/float/float.html
+++ b/css/float/float.html
@@ -59,5 +59,22 @@
     <div class="ib" style="vertical-align: bottom; background-color: red; height: 50px; line-height: 50px;">3 (bottom)</div>
     <div class="ib" style="background-color: gray;">4</div>
   </div>
+
+  <h2>Пример 4</h2>
+  <div class="container4">
+    <div class="floated4">
+      <p include-lorem="37"></p>
+    </div>
+    <div class="fixed4"></div>
+  </div>
+  <style type="text/css">
+    .container4 {
+      background-color: red;
+    }
+  </style>
+  <script type="text/javascript" src="../../js/_libs/ilorem/dist/ilorem.js"></script>
+  <script type="text/javascript">
+    ILorem();
+  </script>
 </body>
 </html>
