--- a/jquery/ajax/ajax_post.html
+++ b/jquery/ajax/ajax_post.html
@@ -66,7 +66,7 @@
   </form>
   <p><b>Result</b></p>
   <pre id="result"></pre>
-  <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="../../theme/yarn/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript">
 
     "use strict"
