--- a/google chrome/all.html
+++ b/google chrome/all.html
@@ -1,4 +1,12 @@
 TODO
+<h2>Настройки</h2>
+<h3>Отключение запроса пароля на связки ключей при запуске хрома</h3>
+<p>First of all, we have to search for Passwords and Encryption Keys. Also you can open it from terminal:</p>
+<pre>seahorse</pre>
+<p>You have to go to Passwords Tab, and there you will se a folder: Passwords: login</p>
+<p>Right Click and then Change Password. Enter your old password, and leave blank the new password fields.</p>
+<p>Now you can try rebooting, it shouldn't appear now!</p>
+
 <h2>Дополнения</h2>
 <h3>Adblock для Youtube™</h3>
 Adblock для Youtube™ - …
