--- a/postgresql/all.html
+++ b/postgresql/all.html
@@ -2,8 +2,13 @@
 <!-- https://postgrespro.ru/ -->
 <h2>Утсановка</h2>
 <p><code class="copyToClipboard">sudo apt-get install postgresql</code></p>
+
 <h2>Кофигурирование</h2>
 <p><code>/etc/postgresql/9.3/main/postgresql.conf</code> — конфигурационный файл.</p>
+
+<h2>Доп. ПО</h2>
+<p>vstudio (Valentina Studion) — GUI редактор.</p>
+
 <h2>Консоль</h2>
 <p><code>sudo -u postgres psql</code></p>
 <p><code>\q</code> + <kbd>Enter</kbd> — выйти из psql</p>
