--- a/semantic-ui/all.html
+++ b/semantic-ui/all.html
@@ -1,4 +1,13 @@
 <h2>Установка</h2>
+
+<h3>npm + gulp</h3>
+<pre class="prettyprint lang-sh">
+npm install semantic-ui@~2.2
+sudo apt install gulp
+cd semantic-install-path (semantic) && gulp build
+</pre>
+
+<h3>По старому</h3>
 <p><code class="copyToClipboard prettyprint lang-sh">bower info semantic-ui</code> - узнать последнюю версию.</p>
 <p><code class="copyToClipboard prettyprint lang-sh">bower i semantic-ui#2.2.7 -S</code></p>
 <p><code class="copyToClipboard prettyprint lang-sh">bower list --path</code> - получить ссылки:</p>
